@@ -95,25 +95,123 @@ Then add the following lines, Rem to change the password to mactch your comp pas
 <role rolename=”admin-gui”/>
 <user username=”admin” password=”PASSWORD” roles=” tomcat, manager-gui, admin-gui”/>
 ``` 
-Optimize Tomcat
+Optimize Tomcat: Run the command
 ```
-sudo apt-get update
+sudo nano /etc/default/tomcat9
+``` 
+Then uncomment and add Java_home path [N:B-> make sure you copy your path, dont paste] check the video liked below.
+```
+JAVA_HOME=/usr/lib/jvm/java-8-openjdk  
+``` 
+Still on the same file, add this below Java_opts 
+NB:Your machine should be 8G RAM , otherwise customize to fit your RAM size.
+```
+JAVA_OPTS="${JAVA_OPTS} -Xmx2048m -Xms1024m -XX:PermSize=512m -XX:MaxPermSize=512m -XX:NewSize=256m"
+
 ``` 
 
+Create OpenMRS directory and and grant user permision to tomcat9
 ```
-sudo apt-get update
+sudo mkdir /var/lib/OpenMRS 
+sudo chown -R tomcat:tomcat /var/lib/OpenMRS/
+sudo chmod -R 755 /var/lib/OpenMRS*
 ``` 
+Redirect logs to catalina : Run the command
+```
+/lib/systemd/system/tomcat9.service
+``` 
+Then comment out the line:
+
+<sub>*SyslogIdentifier=tomcat9*</sub>
+
+Once done, in the same file, add this 2 lines: just below the line commented out
+```
+StandardOutput=append:/var/log/tomcat9/catalina.out
+StandardError=append:/var/log/tomcat9/catalina.out
+``` 
+Under *Service* still in same file, add this below it
+```
+ReadWritePaths=/var/lib/OpenMRS/
+``` 
+Then save the chanes [ press ctrl + O, press ENTER, then ctrl + X]
+
+
+###### Tomcat 9 Rewrite:
+
+Create service.d file by running the command:
+```
+sudo mkdir /etc/systemd/system/tomcat9.service.d
+```
+
+Create blank file in the directory and name it logging-allow.conf, run:
+```
+sudo nano logging-allow.conf
+```
+Once created, add this: and save changes as specified ealier.
+```
+ReadWritePaths=/var/lib/OpenMRS
+```
+
+Reload the daemon process and restart tomcat9:
+```
+sudo systemctl daemon-reload
+sudo systemctl restart tomcat9
+```
+
+Additional: FYI [ commands to start,stop anf restart tomcat9]
 
 ```
-sudo apt-get update
-``` 
+sudo service tomcat9 start
+sudo service tomcat9 stop
+sudo service tomcat9 restart
+sudo service tomcat9 status
+```
+
+### Install mysql 5.6 ubuntu 20
+
+if you have existing different version, uninstall the proceed as stated:
+
+In your terminal run:
+```
+sudo add-apt-repository 'deb http://archive.ubuntu.com/ubuntu trusty universe'
+````
+
+Then run this 
+```
+sudo add-apt-repository 'deb http://kr.archive.ubuntu.com/ubuntu xenial main'
+```
+Update,and install:
+```
+sudo apt update
+```
 
 ```
-sudo apt-get update
-``` 
+sudo apt-get install mysql-server-5.6
+```
 
+Change ownership and set defaults then restart
+```
+sudo touch /var/run/mysqld/mysql.sock
+```
 
-### Screenshots
+```
+sudo chown mysql:mysql /var/run/mysqld
+```
+```
+sudo update-rc.d mysql defaults
+```
+```
+sudo service mysql restart
+```
+
+Commands to start,stop ,restart and check status Mysql
+```
+sudo service mysql start
+sudo service mysql stop
+sudo service mysql restart
+sudo service mysql status
+```
+
 
 <img src="art/1.png" width="200"/> <img src="art/2.png" width="200"/>
 
@@ -123,5 +221,5 @@ sudo apt-get update
   
 -  [Youtube Installation guide tutorial Timz owen [Tomcat / Java] ](https://youtu.be/nf8h4Y5a9C0)
 
- *<sub><sub>cc: borrowed from HealthIT developers Original guide.*</sub></sub>
+ *<sub>cc: borrowed from HealthIT developers Original guide.*</sub>
 
